--- a/2ndQ.html
+++ b/2ndQ.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
 <html>
+
   <head>
     <title>Aptitude Test</title>
     <link rel="stylesheet" href="css/normalize.css">
@@ -11,24 +11,18 @@
   <body>
 
     <div class="wrapper">
+    <div id="game-holder-outer">
       <div id="game-holder">
           <img src="images/yknow.png">
           <div class="text"> 
-            Confidence can be a good sign, but it has also proven destructive in some. Second question: Is the world better off embracing war or peace?</div>
-          <a href="War.html" class="lbutton">
-            <img src="images/button.png">
-            <div class="btext">War</div>
-          </a>
-          <a href="Peace.html" class="rbutton">
-            <img src="images/button.png">
-            <div class="btext">Peace</div>
-          </a> 
+             Confidence can be a good sign, but it has also proven destructive in some. Second question: Is the world better off embracing war or peace?</div>
+          <a href="War.html" class="lbutton button-style">War</a>
+          <a href="Peace.html" class="rbutton button-style">Peace</a> 
+          <p id="footer">©2020 Chaalam Wilson | Binghamton University</p>
       </div>
-    </div>  
-    
-   <div id="footer">
-      <p>©2020 Chaalam Wilson | Binghamton University</p>
+      </div>
     </div>
+  </div>
 
   </body>
 
