--- a/Bad.html
+++ b/Bad.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
 <html>
+
   <head>
     <title>Aptitude Test</title>
     <link rel="stylesheet" href="css/normalize.css">
@@ -11,23 +11,16 @@
   <body>
 
     <div class="wrapper">
+    <div id="game-holder-outer">  
       <div id="game-holder">
           <img src="images/yknow.png">
           <div class="text"> 
             More people are getting hurt under the new law, but the government still doesn’t want superheros roaming the world unchecked. They won’t budge. What do you do?</div>
-          <a href="Retire.html" class="lbutton">
-            <img src="images/button.png">
-            <div class="btext">Retire</div>
-          </a>
-          <a href="Fugitive.html" class="rbutton">
-            <img src="images/button.png">
-            <div class="btext">Operate without the government's knowledge</div>
-          </a> 
+          <a href="Retire.html" class="lbutton button-style">Retire</div></a>
+          <a href="Fugitive.html" class="rbutton button-style">Operate without the government's knowledge</a>
+          <p id="footer">©2020 Chaalam Wilson | Binghamton University</p> 
       </div>
-    </div>  
-    
-   <div id="footer">
-      <p>©2020 Chaalam Wilson | Binghamton University</p>
+    </div>   
     </div>
 
   </body>
