--- a/CantStop.html
+++ b/CantStop.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
 <html>
+ 
   <head>
     <title>Aptitude Test</title>
     <link rel="stylesheet" href="css/normalize.css">
@@ -11,17 +11,16 @@
   <body>
 
     <div class="wrapper">
+    <div id="game-holder-outer">
       <div id="game-holder">
           <img src="images/yknow.png">
           <div class="text"> 
             You continue to fight against supervillains for years, but the public has grown tired of you or your team blowing something up every time you save the day. There are rumors about the government outlawing heroics altoghether. While a hero you are, the ulimate hero you are not.</div>
           <a href="Knock.html" class="ebutton">
             <img src="images/ebutton.png"></a>
+          <p id="footer">©2020 Chaalam Wilson | Binghamton University</p>  
       </div>
-    </div>  
-    
-   <div id="footer">
-      <p>©2020 Chaalam Wilson | Binghamton University</p>
+      </div> 
     </div>
 
   </body>
