--- a/Goodbye.html
+++ b/Goodbye.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
 <html>
+
   <head>
     <title>Aptitude Test</title>
     <link rel="stylesheet" href="css/normalize.css">
@@ -11,17 +11,16 @@
   <body>
 
     <div class="wrapper">
+    <div id="game-holder-outer">
       <div id="game-holder">
           <img src="images/serious.png">
           <div class="text"> 
             Not the response of a hero. That was a trick question, just to make sure you were paying attention. You do not have what it takes. Goodbye.</div>
           <a href="Knock.html" class="ebutton">
             <img src="images/ebutton.png"></a>
+          <p id="footer">©2020 Chaalam Wilson | Binghamton University</p>
       </div>
-    </div>  
-    
-   <div id="footer">
-      <p>©2020 Chaalam Wilson | Binghamton University</p>
+      </div>     
     </div>
 
   </body>
