--- a/Peace.html
+++ b/Peace.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
 <html>
+
   <head>
     <title>Aptitude Test</title>
     <link rel="stylesheet" href="css/normalize.css">
@@ -11,24 +11,18 @@
   <body>
 
     <div class="wrapper">
+    <div id="game-holder-outer">
       <div id="game-holder">
           <img src="images/well.png">
           <div class="text"> 
             That may have been easy to answer but the world isn’t that simple. Scenario: You are hired to create technology capable of maintaining peace, and discover people using it as a weapon. What do you do?</div>
-          <a href="Goodbye.html" class="lbutton">
-            <img src="images/button.png">
-            <div class="btext">Carfully count the zeros on my check</div>
-          </a>
-          <a href="Team.html" class="rbutton">
-            <img src="images/button.png">
-            <div class="btext">Stop them</div>
-          </a> 
+          <a href="Goodbye.html" class="lbutton button-style">Carfully count the zeros on my check</a>
+          <a href="Team.html" class="rbutton button-style">Stop them</a>
+          <p id="footer">©2020 Chaalam Wilson | Binghamton University</p>
       </div>
-    </div>  
-    
-   <div id="footer">
-      <p>©2020 Chaalam Wilson | Binghamton University</p>
-    </div>
+      </div>  
+    <div >
+  </div>
 
   </body>
 
