--- a/Problem.html
+++ b/Problem.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
 <html>
+
   <head>
     <title>Aptitude Test</title>
     <link rel="stylesheet" href="css/normalize.css">
@@ -11,24 +11,18 @@
   <body>
 
     <div class="wrapper">
+    <div id="game-holder-outer">
       <div id="game-holder">
-          <img src="images/serious.png">
+        <img src="images/serious.png">
           <div class="text"> 
             A few years have passed, and your team of heros has saved countless lives. Unfortunately, an increasing number of lives are being lost due to collateral damage. Another of your creations is hurting people; what do you do?</div>
-          <a href="CantStop.html" class="lbutton">
-            <img src="images/button.png">
-            <div class="btext">The saved outweigh the lost; We can't stop</div>
-          </a>
-          <a href="Restricted.html" class="rbutton">
-            <img src="images/button.png">
-            <div class="btext">We need to be held accountable</div>
-          </a> 
+          <a href="CantStop.html" class="lbutton button-style">The saved outweigh the lost; We can't stop</a>
+          <a href="Restricted.html" class="rbutton button-style">We need to be held accountable</a>
+          <p id="footer">©2020 Chaalam Wilson | Binghamton University</p>
       </div>
-    </div>  
-    
-   <div id="footer">
-      <p>©2020 Chaalam Wilson | Binghamton University</p>
+      </div>
     </div>
+  </div>
 
   </body>
 
