--- a/Restricted.html
+++ b/Restricted.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
 <html>
+
   <head>
     <title>Aptitude Test</title>
     <link rel="stylesheet" href="css/normalize.css">
@@ -11,23 +11,16 @@
   <body>
 
     <div class="wrapper">
+    <div id="game-holder-outer">  
       <div id="game-holder">
           <img src="images/well.png">
           <div class="text"> 
             The government puts a law in place restricting random acts of heroism. This means your team is only allowed to work when the government deems it necessary. Do you follow the law?</div>
-          <a href="Control.html" class="lbutton">
-            <img src="images/button.png">
-            <div class="btext">Of course</div>
-          </a>
-          <a href="Fugitive.html" class="rbutton">
-            <img src="images/button.png">
-            <div class="btext">No</div>
-          </a> 
+          <a href="Control.html" class="lbutton button-style">Of course</a>
+          <a href="Fugitive.html" class="rbutton button-style">No</a> 
+          <p id="footer">©2020 Chaalam Wilson | Binghamton University</p>
       </div>
-    </div>  
-    
-   <div id="footer">
-      <p>©2020 Chaalam Wilson | Binghamton University</p>
+      </div>       
     </div>
 
   </body>
