--- a/Retire.html
+++ b/Retire.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
 <html>
+
   <head>
     <title>Aptitude Test</title>
     <link rel="stylesheet" href="css/normalize.css">
@@ -11,17 +11,16 @@
   <body>
 
     <div class="wrapper">
+    <div id="game-holder-outer">
       <div id="game-holder">
           <img src="images/well.png">
           <div class="text"> 
            Well, it was a good run. You were a source of hope to many, but were rendered ineffective by bureaucracy. Maybe the world isn’t ready for the ultimate superhero.</div>
           <a href="Knock.html" class="ebutton">
             <img src="images/ebutton.png"></a>
+          <p id="footer">©2020 Chaalam Wilson | Binghamton University</p>
       </div>
     </div>  
-    
-   <div id="footer">
-      <p>©2020 Chaalam Wilson | Binghamton University</p>
     </div>
 
   </body>
