--- a/Solo.html
+++ b/Solo.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
 <html>
+
   <head>
     <title>Aptitude Test</title>
     <link rel="stylesheet" href="css/normalize.css">
@@ -11,18 +11,17 @@
   <body>
 
     <div class="wrapper">
+    <div id="game-holder-outer"> 
       <div id="game-holder">
           <img src="images/serious.png">
           <div class="text"> 
             A few years have passed, and the number of heros and villains has risen exponentially. Many have decided to team up. With no backup, you are killed in battle. While some remember you as a hero, most use the term vigilante. Sorry, but you are not the ultimate superhero.</div>
           <a href="Knock.html" class="ebutton">
             <img src="images/ebutton.png"></a>
+          <p id="footer">©2020 Chaalam Wilson | Binghamton University</p>
       </div>
-    </div>  
-    
-   <div id="footer">
-      <p>©2020 Chaalam Wilson | Binghamton University</p>
-    </div>
+      </div> 
+    </div> 
 
   </body>
 
