--- a/Team.html
+++ b/Team.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
 <html>
+
   <head>
     <title>Aptitude Test</title>
     <link rel="stylesheet" href="css/normalize.css">
@@ -11,24 +11,18 @@
   <body>
 
     <div class="wrapper">
+    <div id="game-holder-outer">
       <div id="game-holder">
           <img src="images/well.png">
           <div class="text"> 
             Pretty heroic. You notice others following your example, trying to be heroic, to varying degrees of success. Would you like to take a few under your wing?</div>
-          <a href="Problem.html" class="lbutton">
-            <img src="images/button.png">
-            <div class="btext">Sure</div>
-          </a>
-          <a href="Solo.html" class="rbutton">
-            <img src="images/button.png">
-            <div class="btext">I work alone</div>
-          </a> 
+          <a href="Problem.html" class="lbutton button-style">Sure</a>
+          <a href="Solo.html" class="rbutton button-style">I work alone</a>
+          <p id="footer">©2020 Chaalam Wilson | Binghamton University</p>
       </div>
-    </div>  
-    
-   <div id="footer">
-      <p>©2020 Chaalam Wilson | Binghamton University</p>
+      </div>  
     </div>
+  </div>
 
   </body>
 
