--- a/Control.html
+++ b/Control.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
 <html>
+
   <head>
     <title>Aptitude Test</title>
     <link rel="stylesheet" href="css/normalize.css">
@@ -11,25 +11,18 @@
   <body>
 
     <div class="wrapper">
+    <div id="game-holder-outer">  
       <div id="game-holder">
           <img src="images/serious.png">
           <div class="text"> 
             The government now has control over all of your operations. They either won’t let you go where you think you need to, or make you too late to be effective because of their voting. What do you do?</div>
-          <a href="Bad.html" class="lbutton">
-            <img src="images/button.png">
-            <div class="btext">Grit my teeth, follow the law</div>
-          </a>
-          <a href="Fugitive.html" class="rbutton">
-            <img src="images/button.png">
-            <div class="btext">Operate without the government's knowledge</div>
-          </a> 
+          <a href="Bad.html" class="lbutton button-style">Grit my teeth, follow the law</a>
+          <a href="Fugitive.html" class="rbutton button-style">Operate without the government's knowledge</a> 
+          <p id="footer">©2020 Chaalam Wilson | Binghamton University</p>
       </div>
+    </div>
     </div>  
     
-   <div id="footer">
-      <p>©2020 Chaalam Wilson | Binghamton University</p>
-    </div>
-
   </body>
 
 </html>
