--- a/Humility.html
+++ b/Humility.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
 <html>
+
   <head>
     <title>Aptitude Test</title>
     <link rel="stylesheet" href="css/normalize.css">
@@ -11,24 +11,18 @@
   <body>
 
     <div class="wrapper">
+    <div id="game-holder-outer">
       <div id="game-holder">
-          <img src="images/well.png" title="Welcome">
+          <img src="images/well.png">
           <div class="text"> 
             Humility is a sign of a true hero. Feel free to leave, but I see potential in you. </div>
-          <a href="2ndQ.html" class="lbutton">
-            <img src="images/button.png">
-            <div class="btext">I'm feeling more confident</div>
-          </a>
-          <a href="Knock.html" class="rbutton">
-            <img src="images/button.png">
-            <div class="btext">I give up</div>
-          </a> 
+          <a href="2ndQ.html" class="lbutton button-style">War</a>
+          <a href="Knock.html" class="rbutton button-style">Peace</a> 
+          <p id="footer">©2020 Chaalam Wilson | Binghamton University</p>
       </div>
-    </div>  
-    
-   <div id="footer">
-      <p>©2020 Chaalam Wilson | Binghamton University</p>
+      </div>
     </div>
+  </div>
 
   </body>
 
