--- a/War.html
+++ b/War.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
 <html>
+
   <head>
     <title>Aptitude Test</title>
     <link rel="stylesheet" href="css/normalize.css">
@@ -11,24 +11,18 @@
   <body>
 
     <div class="wrapper">
+    <div id="game-holder-outer">  
       <div id="game-holder">
           <img src="images/well.png">
           <div class="text"> 
             Next Question: If you could use war to become wealthy, would you?</div>
-          <a href="Goodbye.html" class="lbutton">
-            <img src="images/button.png">
-            <div class="btext">Yes</div>
-          </a>
-          <a href="Peace.html" class="rbutton">
-            <img src="images/button.png">
-            <div class="btext">No</div>
-          </a> 
+          <a href="Goodbye.html" class="lbutton button-style">Yes</a>
+          <a href="Peace.html" class="rbutton button-style">No</a> 
+          <p id="footer">©2020 Chaalam Wilson | Binghamton University</p>
       </div>
-    </div>  
-    
-   <div id="footer">
-      <p>©2020 Chaalam Wilson | Binghamton University</p>
-    </div>
+      </div>  
+    <div >
+  </div>
 
   </body>
 
