--- a/Humility.html
+++ b/Humility.html
@@ -16,8 +16,8 @@
           <img src="images/well.png">
           <div class="text"> 
             Humility is a sign of a true hero. Feel free to leave, but I see potential in you. </div>
-          <a href="2ndQ.html" class="lbutton button-style">War</a>
-          <a href="Knock.html" class="rbutton button-style">Peace</a> 
+          <a href="2ndQ.html" class="lbutton button-style">I'm feeling more confident</a>
+          <a href="Knock.html" class="rbutton button-style">I give up</a> 
           <p id="footer">©2020 Chaalam Wilson | Binghamton University</p>
       </div>
       </div>
