--- a/index.html
+++ b/index.html
@@ -114,15 +114,17 @@
 					</div>
 				</div>
 				<div class="width-6-12-m width-4-12 thumb">
-					<img class="r-image" src="https://via.placeholder.com/1600x900" />
+					<img class="r-image" src="hi.png" />
 					<div class="body">
 						<h1>Project 3: Digital Storytelling</h1>
-						<p>
-							<img class="r-image" src="images/412p3Outline.png" title="D1">
-							<img class="r-image" src="images/412_P3_Storyboard.png" title="Story">
-							<img class="r-image" src="images/412_P3_WebPages.png" title="Pages">
-						</p>
-						<p>After being quarantined, I spent some time rewatching all of my favorite Marvel movies. For this project I decided to explore the character development of Iron Man. The user is given a series of questions and scenarios, allowing them to see what they would do in similar circumstances. User options are placed on the left and right of the screen. I knew that I wanted an old-school feel to the project, so I modelled it after games like Dragon's Lair and Akinator. I decided to give the webpage a static background and multiple sprites of the same character for different talking points. </p>
+							<p>
+								<img class="r-image" src="images/412p3Outline.png" title="D1">
+								<img class="r-image" src="images/412_P3_Storyboard.png" title="Story">
+								<img class="r-image" src="images/412_P3_WebPages.png" title="Pages">
+							</p>
+							<p>
+								After being quarantined, I spent some time rewatching all of my favorite Marvel movies. For this project I decided to explore the character development of Iron Man. The user is given a series of questions and scenarios, allowing them to see what they would do in similar circumstances. User options are placed on the left and right of the screen. I knew that I wanted an old-school feel to the project, so I modelled it after games like Dragon's Lair and Akinator. I decided to give the webpage a static background and multiple sprites of the same character for different talking points. You can view the project <a href= "Knock.html">here</a>
+							</p>
 					</div>
 				</div>
 			</div>
