--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 					</div>
 				</div>
 				<div class="width-6-12-m width-4-12 thumb">
-					<img class="r-image" src="hi.png" />
+					<img class="r-image" src="images/hi.png" />
 					<div class="body">
 						<h1>Project 3: Digital Storytelling</h1>
 							<p>
